--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -4,33 +4,39 @@
 name: Python application
 
 on:
-  schedule:
-    - cron:  '0 11 * * *'
+    schedule:
+        - cron: '0 11 * * *'
 
 jobs:
-  build:
+    build:
+        runs-on: ubuntu-latest
 
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.8
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: install poppler
-      run: |
-        sudo apt install poppler-utils
-    - name: Run Main Script
-      run: |
-        python main.py
-    - name: Run csv2json Script
-      run: |
-        python convert.py
-    - name: Run vrest Script
-      run: |
-        python vrest.py
+        steps:
+            - uses: actions/checkout@v2
+            - name: Set up Python 3.8
+              uses: actions/setup-python@v1
+              with:
+                  python-version: 3.8
+            - name: Install dependencies
+              run: |
+                  python -m pip install --upgrade pip
+                  pip install -r requirements.txt
+            - name: install poppler
+              run: |
+                  sudo apt install poppler-utils
+            - name: Run Main Script
+              run: |
+                  python main.py
+            - name: Run csv2json Script
+              run: |
+                  python convert.py
+            - name: Run vrest Script
+              run: |
+                  python vrest.py
+            - uses: actions/checkout@v2
+            - name: deploy gh-pages
+              uses: peaceiris/actions-gh-pages@v3
+              with:
+                  github_token: ${{ secrets.GITHUB_TOKEN }}
+                  publish_dir: ./dist
+                  publish_branch: gh-pages
