--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,10 +34,9 @@ jobs:
             - name: Run vrest Script
               run: |
                   python vrest.py
-            - uses: actions/checkout@v2
             - name: deploy gh-pages
               uses: peaceiris/actions-gh-pages@v3
               with:
                   github_token: ${{ secrets.GITHUB_TOKEN }}
-                  publish_dir: ../dist
+                  publish_dir: ./dist
                   publish_branch: gh-pages
